<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".loginFragment">


<EditText
    android:id="@+id/et_email"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:hint="@string/e_mail"
    android:inputType="textEmailAddress"
    android:padding="15dp"
    android:textSize="15sp"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="0dp"
    android:autofillHints="" />

<EditText
    android:id="@+id/et_password"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:padding="15dp"
    android:textSize="15sp"
    app:layout_constraintTop_toBottomOf="@+id/et_email" />


<Button
    android:id="@+id/btn_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"

    android:text="@string/login"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:layout_editor_absoluteX="20dp"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="delete"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.334" />

    <Button
        android:id="@+id/view_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ViewData"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.665" />


</androidx.constraintlayout.widget.ConstraintLayout>